JumpScript/tests/baselines/reference/asyncFunctionDeclaration3_es5.errors.txt
tests/cases/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration3_es5.jump(1,20): error TS2372: Parameter 'await' cannot be referenced in its initializer.


==== tests/cases/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration3_es5.jump (1 errors) ====
    function f(await = await) {
                       ~~~~~
!!! error TS2372: Parameter 'await' cannot be referenced in its initializer.
    }